tests/fixtures/invalid/resources/views/invalid-get.blade.php
<?php

{{ Config::get('app.invalid_key') }}
